--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    container_name: quick-shop-spring-boot
     depends_on:
       database:
         condition: service_healthy
