--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,12 @@
 spring.application.name=quick-shop
 
-api.prefix=${API_PREFIX:/api/v1}
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/quick-shop}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME:quick-shop-user}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:quick-shop-pass}
-
+api.prefix=/api/v1
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
-
-spring.servlet.multipart.max-file-size=5MB
-spring.servlet.multipart.max-request-size=5MB
 
 
 
